Add quacking variation via css variables

--- a/src/duck-loader/style.styl
+++ b/src/duck-loader/style.styl
@@ -36,7 +36,7 @@ body
     width 30%
 
     &__wing
-      animation flap 6s infinite
+      animation flap calc(var(--wing) / 1000 * 1s) infinite
       background white
       height 50%
       position absolute
