--- a/src/css-game-proto/style.styl
+++ b/src/css-game-proto/style.styl
@@ -3,6 +3,11 @@
 *:after
   box-sizing border-box
 
+.g
+  position relative
+  width 220px
+  height 220px
+
 body
   background-color dodgerblue
   display flex
@@ -10,58 +15,125 @@ body
   justify-content center
   min-height 100vh
 
-input
-  cursor pointer
-  height 50px
-  width 50px
-  position relative
-  outline 0
+span
+  height 100px
+  width 100px
+  display inline-block
+  margin 4px
+  background transparent
+  transform-style preserve-3d
+  position absolute
+  left calc((var(--x) * 100px) + ((var(--x)) * 20px))
+  top calc((var(--y) * 100px) + ((var(--y)) * 20px))
 
-  &:after
   &:before
-    background blue
+  &:after
     content ''
-    position absolute
-    border 5px solid white
+    display block
     height 100%
     width 100%
+    position absolute
+    top 0
+    left 0
+    backface-visibility hidden
 
-  &:checked:after
-    background green
+  &:before
+    background linear-gradient(45deg, red, orange, yellow)
+    transform rotateY(0deg)
+    z-index 1
 
-#a:checked
+
   &:after
-    background red
+    background-size cover
+    background-color rebeccapurple
+    transform rotateY(180deg)
 
-  ~ input:checked:not(#a):after
-    background black
+input
+  cursor pointer
+  height 100px
+  width 100px
+  margin 4px
+  background red
+  border 2px solid black
+  position absolute
+  left calc((var(--x) * 100px) + ((var(--x)) * 20px))
+  top calc((var(--y) * 100px) + ((var(--y)) * 20px))
+  outline 0
+  z-index 2
+  opacity 0
 
-
-  ~ #a:checked
-    &:after
-      background rebeccapurple
-
-    ~ .correct#a
-      display block
-
-    ~ [name='third']
-    ~ [name='fourth']
-      display block
-      z-index 1
-
-.correct
+.w
   display none
-  height 50px
-  width 50px
-  border 5px solid white
+  position fixed
+  font-size 5rem
+  top 50%
+  left 50%
+  margin-left -80px
+  margin-top -80px
+  height 200px
+  width 200px
+  text-align center
+  line-height 200px
+  animation win .5s
+  animation-fill-mode forwards
 
-.winner
+$cards = 4
+round(n, finish, omit)
+  for start in (0..($cards - 1))
+    if start != omit
+      #c-{start}-{n * 2}:checked + span
+      #c-{start}-{n * 2}:checked ~ .p [data={'"' + (start%($cards/2)) + '"'}]:checked + span
+        transform rotateY(180deg)
+        animation none
+
+      #c-{start}-{n * 2}:checked ~ .p input:not([data={'"' + (start%($cards/2)) + '"'}]):checked + span
+        animation falsey .5s steps(1)
+
+      #c-{start}-{n * 2}:checked ~ .p
+      #c-{start}-{n * 2}:checked ~ .p [data={'"' + (start%($cards/2)) + '"'}]:checked ~ .p
+        display block
+
+      #c-{start}-{n * 2}:checked ~ .p .c-{start}
+      #c-{start}-{n * 2}:checked ~ .p [data={'"' + (start%($cards/2)) + '"'}]:checked ~ .p [data={'"' + (start%($cards/2)) + '"'}]
+        visibility hidden
+
+      #c-{start}-{n * 2}:checked ~ .p [data={'"' + (start%($cards/2)) + '"'}]:checked ~ .p
+        if (n != finish)
+          round(n + 1, finish, start)
+
+      #c-{start}-{n * 2}:checked ~ .p [data={'"' + (start%($cards/2)) + '"'}]:checked
+        if (n is finish)
+          ~ .w
+            display block
+
+@keyframes falsey
+  0%
+    transform rotateY(180deg)
+  100%
+    transform rotateY(0deg)
+
+@keyframes win
+  0%
+    transform scale(0) rotate(0deg)
+  90%
+    transform scale(2.5) rotate(30deg)
+  100%
+    transform scale(2) rotate(0deg)
+
+.p
   display none
+  position absolute
+  height 100%
+  width 100%
+  for r in (0..($cards - 1))
+    &-{r}
+      z-index r + 1
+  round(0, ($cards / 2) - 1, $cards + 1)
 
-[name='third']
-[name='fourth']
-  display none
-
-.correct:enabled
-  ~ .winner
-    display block
+span
+  &[data='0']:after
+    background-color rebeccapurple
+    background-image url(https://placebear.com/100/100)
+  &[data='1']:after
+    background-color #2eec71
+    background-image url(https://placebear.com/200/200)
