--- a/src/css-game-proto/dev.pug
+++ b/src/css-game-proto/dev.pug
@@ -10,13 +10,14 @@
 -  return arr
 - }
 - const cards = 4
-- const x = shuffle([0, 0, 1, 1])
-- const y = shuffle([0, 0, 1, 1])
+- const ord = shuffle([0, 1, 2, 3])
+- const co = [[0, 0], [0, 1], [1, 0], [1, 1]]
 mixin pick(no, limit)
   .p(class=`p-${no}`, style=`${no === 0 ? 'display: block' : ''}`)
     - for (let c = 0; c < cards; c++)
-      input(class=`c-${c}`, type='radio', id=`c-${c}-${no}`, name=no, data=`${c % (cards / 2)}`, style=`--x: ${x[c]}; --y: ${y[c]};`)
-      span(class=`c-${c}`, data=`${c % (cards / 2)}`, style=`--x: ${x[c]}; --y: ${y[c]};`)
+      - const chosenXY = co[ord[c]]
+      input(class=`c-${c}`, type='radio', id=`c-${c}-${no}`, name=no, data=`${c % (cards / 2)}`, style=`--x: ${chosenXY[0]}; --y: ${chosenXY[1]};`)
+      span(class=`c-${c}`, data=`${c % (cards / 2)}`, style=`--x: ${chosenXY[0]}; --y: ${chosenXY[1]};`)
     - if (no + 1 !== limit)
       +pick(no + 1, limit)
     - if (no + 1 === limit)
