--- a/src/duck-loader/style.styl
+++ b/src/duck-loader/style.styl
@@ -24,6 +24,31 @@ body
   transform-origin preserve-3d
   width $size
 
+  &__rain
+    position absolute
+    height 100%
+    width 100%
+    top 0
+    left 0
+    border-radius 150px
+    overflow hidden
+    transform translate3d(0, 0, 0) rotate(30deg)
+    span
+      background blue
+      height 4px
+      width 2px
+      position absolute
+      top calc(var(--y) * -1px)
+      left calc(var(--x) * 1%)
+      transform rotate(0deg)
+      animation rain .75s infinite linear
+
+    @keyframes rain
+      from
+        transform translateY(0)
+      to
+        transform translateY(1200px)
+
   &-duck
     -webkit-clip-path inset(-100% -100% 25% 0%)
     animation duck 6s infinite
