--- a/src/css-rain/style.styl
+++ b/src/css-rain/style.styl
@@ -4,7 +4,7 @@
   box-sizing border-box
 
 body
-  background-color #111
+  background-color #6c78a9
   display flex
   align-items center
   justify-content center
