Further amendments to CSS rain

--- a/src/duck-loader/style.styl
+++ b/src/duck-loader/style.styl
@@ -53,7 +53,7 @@ body
       75%
         opacity 1
       100%
-        transform translateY(95vh)
+        transform translateY($size)
         opacity 0
 
   &-duck
