--- a/src/duck-loader/dev.pug
+++ b/src/duck-loader/dev.pug
@@ -5,8 +5,8 @@
     .duck-loader-duck__head
     .duck-loader-duck__wing
   .duck-loader__rain
-    - for (let r = 0; r < 50; r++)
-      svg.rain__drop(preserveAspectRatio="xMinYMin", viewBox='0 0 5 50', style=`--x: ${Math.floor(Math.random() * 100)}; --y: ${Math.floor(Math.random() * 20)}; --o: ${Math.random()}; --a: ${Math.random() + 0.5}; --d: ${(Math.random() * 2) + 0.5}; --s: ${Math.random()}`)
+    - for (let r = 0; r < 80; r++)
+      svg.rain__drop(preserveAspectRatio="xMinYMin", viewBox='0 0 5 50', style=`--x: ${Math.floor(Math.random() * 100)}; --y: ${Math.floor(Math.random() * 300)}; --o: ${Math.random()}; --a: ${(Math.random()) + 0.25}; --d: ${(Math.random() * 2) - 1}; --s: ${Math.random()}`)
         path(stroke='none', d="M 2.5,0 C 2.6949458,3.5392017 3.344765,20.524571 4.4494577,30.9559 5.7551357,42.666753 4.5915685,50 2.5,50 0.40843152,50 -0.75513565,42.666753 0.55054234,30.9559 1.655235,20.524571 2.3050542,3.5392017 2.5,0 Z")
 button.mute.mute--active
   svg(viewBox="0 0 24 24", class='mute__icon')
