--- a/src/phonebook-details/dev.pug
+++ b/src/phonebook-details/dev.pug
@@ -1,5 +1,27 @@
 .phonebook.phonebook--loading(v-on:scroll='update')
-  ul.phonebook__contacts
-    li.phonebook__contact(v-for="contact, i in contacts", :class="[i === active ? 'phonebook__contact--active' : '', i === next ? 'phonebook__contact--next' : '', i === prev ? 'phonebook__contact--prev' : '']")
+  header.phonebook__header
+    .phonebook__header-title Contacts
+  article.contact(v-if="detailOpened")
+    header.phonebook__header(ref='fakeHeader')
+    button.contact__close(v-on:click='closeDetails')
+    .contact__title
+      .contact__avatar--backdrop(ref='activeAvatarBack', v-bind:style="{'--y': messageTop, 'background-image': 'url(' + activeContact.avatar + ')' }")
+      img.contact__avatar(ref='activeAvatar', :src="activeContact.avatar", v-bind:style="{'--y': messageTop }")
+      .contact__name(ref='activeName', v-bind:style="{'--y': messageTop }") {{activeContact.name}}
+    .contact__details(ref='activeDetails', v-bind:style="{'top': messageTop, '--y': 100, '--t': messageTop }")
+      dl
+        dt WhatsApp
+        dd Blah blaj
+    //- Fake message containers for animation transition
+    ul.phonebook__contacts--fake.phonebook__contacts--fake-top(ref='topFake', v-if='openingDetail', v-bind:style="{bottom: fakePosOne}")
+      li.phonebook__contact(v-for='contact, i in contacts.slice(active - (active > 5 ? 5 : active), active)', :class="[i === (active > 5 ? 4 : active - 1) ? 'phonebook__contact--prev' : '']")
+        img.phonebook__contact-avatar(:src="contact.avatar")
+        .phonebook__contact-name {{contact.name}}
+    ul.phonebook__contacts--fake.phonebook__contacts--fake-bottom(ref='bottomFake', v-if='openingDetail', v-bind:style="{top: fakePosTwo}")
+      li.phonebook__contact(v-for='contact, i in contacts.slice(active + 1, active + 5)', :class="[i === 0 ? 'phonebook__contact--next' : '']")
+        img.phonebook__contact-avatar(:src="contact.avatar")
+        .phonebook__contact-name {{contact.name}}
+  ul.phonebook__contacts(ref='contacts', v-bind:class="{ 'phonebook__contacts--opening': openingDetail }")
+    li.phonebook__contact(v-for="contact, i in contacts", v-on:click="() => selectContact(i, contact)", :class="[i === active ? 'phonebook__contact--active' : '', i === next ? 'phonebook__contact--next' : '', i === prev ? 'phonebook__contact--prev' : '']")
       img.phonebook__contact-avatar(:src="contact.avatar")
       .phonebook__contact-name {{contact.name}}
