--- a/src/phonebook-details/dev.pug
+++ b/src/phonebook-details/dev.pug
@@ -1,27 +1,47 @@
+mixin icon(path, className)
+  svg(class=className, viewBox="0 0 24 24", preserveAspectRatio='xMinYMin')
+    path(d=path)
+mixin header(fake)
+  header.phonebook-header(ref=`${fake ? 'fakeHeader' : false}`, class=`${fake ? 'phonebook-header--fake' : ''}`, :data-active="activeContact.firstName.charAt(0)")
+    .phonebook-header__title Contacts
+    .phonebook-header__actions
+      button.phonebook-header__action
+        .bloom
+        +icon("M15,14C12.33,14 7,15.33 7,18V20H23V18C23,15.33 17.67,14 15,14M6,10V7H4V10H1V12H4V15H6V12H9V10M15,12A4,4 0 0,0 19,8A4,4 0 0,0 15,4A4,4 0 0,0 11,8A4,4 0 0,0 15,12Z")
+      button.phonebook-header__action
+        .bloom
+        +icon("M12,16A2,2 0 0,1 14,18A2,2 0 0,1 12,20A2,2 0 0,1 10,18A2,2 0 0,1 12,16M12,10A2,2 0 0,1 14,12A2,2 0 0,1 12,14A2,2 0 0,1 10,12A2,2 0 0,1 12,10M12,4A2,2 0 0,1 14,6A2,2 0 0,1 12,8A2,2 0 0,1 10,6A2,2 0 0,1 12,4Z")
+- const paths = {instagram: "M7.8,2H16.2C19.4,2 22,4.6 22,7.8V16.2A5.8,5.8 0 0,1 16.2,22H7.8C4.6,22 2,19.4 2,16.2V7.8A5.8,5.8 0 0,1 7.8,2M7.6,4A3.6,3.6 0 0,0 4,7.6V16.4C4,18.39 5.61,20 7.6,20H16.4A3.6,3.6 0 0,0 20,16.4V7.6C20,5.61 18.39,4 16.4,4H7.6M17.25,5.5A1.25,1.25 0 0,1 18.5,6.75A1.25,1.25 0 0,1 17.25,8A1.25,1.25 0 0,1 16,6.75A1.25,1.25 0 0,1 17.25,5.5M12,7A5,5 0 0,1 17,12A5,5 0 0,1 12,17A5,5 0 0,1 7,12A5,5 0 0,1 12,7M12,9A3,3 0 0,0 9,12A3,3 0 0,0 12,15A3,3 0 0,0 15,12A3,3 0 0,0 12,9Z", twitter: "M22.46,6C21.69,6.35 20.86,6.58 20,6.69C20.88,6.16 21.56,5.32 21.88,4.31C21.05,4.81 20.13,5.16 19.16,5.36C18.37,4.5 17.26,4 16,4C13.65,4 11.73,5.92 11.73,8.29C11.73,8.63 11.77,8.96 11.84,9.27C8.28,9.09 5.11,7.38 3,4.79C2.63,5.42 2.42,6.16 2.42,6.94C2.42,8.43 3.17,9.75 4.33,10.5C3.62,10.5 2.96,10.3 2.38,10C2.38,10 2.38,10 2.38,10.03C2.38,12.11 3.86,13.85 5.82,14.24C5.46,14.34 5.08,14.39 4.69,14.39C4.42,14.39 4.15,14.36 3.89,14.31C4.43,16 6,17.26 7.89,17.29C6.43,18.45 4.58,19.13 2.56,19.13C2.22,19.13 1.88,19.11 1.54,19.07C3.44,20.29 5.7,21 8.12,21C16,21 20.33,14.46 20.33,8.79C20.33,8.6 20.33,8.42 20.32,8.23C21.16,7.63 21.88,6.87 22.46,6Z", email: "M20,8L12,13L4,8V6L12,11L20,6M20,4H4C2.89,4 2,4.89 2,6V18A2,2 0 0,0 4,20H20A2,2 0 0,0 22,18V6C22,4.89 21.1,4 20,4Z", homenumber: "M10,20V14H14V20H19V12H22L12,3L2,12H5V20H10Z", number: "M6.62,10.79C8.06,13.62 10.38,15.94 13.21,17.38L15.41,15.18C15.69,14.9 16.08,14.82 16.43,14.93C17.55,15.3 18.75,15.5 20,15.5A1,1 0 0,1 21,16.5V20A1,1 0 0,1 20,21A17,17 0 0,1 3,4A1,1 0 0,1 4,3H7.5A1,1 0 0,1 8.5,4C8.5,5.25 8.7,6.45 9.07,7.57C9.18,7.92 9.1,8.31 8.82,8.59L6.62,10.79Z", whatsapp: "M16.75,13.96C17,14.09 17.16,14.16 17.21,14.26C17.27,14.37 17.25,14.87 17,15.44C16.8,16 15.76,16.54 15.3,16.56C14.84,16.58 14.83,16.92 12.34,15.83C9.85,14.74 8.35,12.08 8.23,11.91C8.11,11.74 7.27,10.53 7.31,9.3C7.36,8.08 8,7.5 8.26,7.26C8.5,7 8.77,6.97 8.94,7H9.41C9.56,7 9.77,6.94 9.96,7.45L10.65,9.32C10.71,9.45 10.75,9.6 10.66,9.76L10.39,10.17L10,10.59C9.88,10.71 9.74,10.84 9.88,11.09C10,11.35 10.5,12.18 11.2,12.87C12.11,13.75 12.91,14.04 13.15,14.17C13.39,14.31 13.54,14.29 13.69,14.13L14.5,13.19C14.69,12.94 14.85,13 15.08,13.08L16.75,13.96M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22C10.03,22 8.2,21.43 6.65,20.45L2,22L3.55,17.35C2.57,15.8 2,13.97 2,12A10,10 0 0,1 12,2M12,4A8,8 0 0,0 4,12C4,13.72 4.54,15.31 5.46,16.61L4.5,19.5L7.39,18.54C8.69,19.46 10.28,20 12,20A8,8 0 0,0 20,12A8,8 0 0,0 12,4Z", codepen: "M15.09,12L12,14.08V14.09L8.91,12L12,9.92V9.92L15.09,12M12,2C11.84,2 11.68,2.06 11.53,2.15L2.5,8.11C2.27,8.22 2.09,8.43 2,8.67V14.92C2,15.33 2,15.33 2.15,15.53L11.53,21.86C11.67,21.96 11.84,22 12,22C12.16,22 12.33,21.95 12.47,21.85L21.85,15.5C22,15.33 22,15.33 22,14.92V8.67C21.91,8.42 21.73,8.22 21.5,8.1L12.47,2.15C12.32,2.05 12.16,2 12,2M16.58,13L19.59,15.04L12.83,19.6V15.53L16.58,13M19.69,8.9L16.58,11L12.83,8.47V4.38L19.69,8.9M20.33,10.47V13.53L18.07,12L20.33,10.47M7.42,13L11.17,15.54V19.6L4.41,15.04L7.42,13M4.31,8.9L11.17,4.39V8.5L7.42,11L4.31,8.9M3.67,10.5L5.93,12L3.67,13.54V10.5Z"}
+
 .phonebook.phonebook--loading(v-on:scroll='update')
-  header.phonebook__header
-    .phonebook__header-title Contacts
+  +header()
   article.contact(v-if="detailOpened")
-    header.phonebook__header(ref='fakeHeader')
+    +header(true)
     button.contact__close(v-on:click='closeDetails')
-    .contact__title
+      +icon("M20,11V13H8L13.5,18.5L12.08,19.92L4.16,12L12.08,4.08L13.5,5.5L8,11H20Z")
+    button.contact__menu
+      +icon("M12,16A2,2 0 0,1 14,18A2,2 0 0,1 12,20A2,2 0 0,1 10,18A2,2 0 0,1 12,16M12,10A2,2 0 0,1 14,12A2,2 0 0,1 12,14A2,2 0 0,1 10,12A2,2 0 0,1 12,10M12,4A2,2 0 0,1 14,6A2,2 0 0,1 12,8A2,2 0 0,1 10,6A2,2 0 0,1 12,4Z")
+    .contact__title(v-bind:style="{'--y': messageTop}")
       .contact__avatar--backdrop(ref='activeAvatarBack', v-bind:style="{'--y': messageTop, 'background-image': 'url(' + activeContact.avatar + ')' }")
       img.contact__avatar(ref='activeAvatar', :src="activeContact.avatar", v-bind:style="{'--y': messageTop }")
-      .contact__name(ref='activeName', v-bind:style="{'--y': messageTop }") {{activeContact.name}}
-    .contact__details(ref='activeDetails', v-bind:style="{'top': messageTop, '--y': 100, '--t': messageTop }")
-      dl
-        dt WhatsApp
-        dd Blah blaj
+      .contact__name(ref='activeName', v-bind:style="{'--y': messageTop }") {{activeContact.firstName}} {{activeContact.lastName}}
+    .contact__details(ref='activeDetails', v-bind:style="{top: messageTop + 'px', '--y': 100, '--t': messageTop }")
+      dl.contact-details
+        - for(social of ['number', 'homenumber', 'email', 'whatsapp', 'twitter', 'instagram', 'codepen'])
+          dt(v-if=`activeContact.${social}`)
+            button.contact-details__action
+              +icon(paths[social], 'contact-details__icon')
+          dd.contact-details__detail(v-if=`activeContact.${social}`)= `{{activeContact.${social.toLowerCase()}}}`
     //- Fake message containers for animation transition
-    ul.phonebook__contacts--fake.phonebook__contacts--fake-top(ref='topFake', v-if='openingDetail', v-bind:style="{bottom: fakePosOne}")
+    ul.phonebook__contacts--fake.phonebook__contacts--fake-top(ref='topFake', v-if='detailOpened', v-bind:style="{bottom: fakePosOne + 'px'}")
       li.phonebook__contact(v-for='contact, i in contacts.slice(active - (active > 5 ? 5 : active), active)', :class="[i === (active > 5 ? 4 : active - 1) ? 'phonebook__contact--prev' : '']")
         img.phonebook__contact-avatar(:src="contact.avatar")
-        .phonebook__contact-name {{contact.name}}
-    ul.phonebook__contacts--fake.phonebook__contacts--fake-bottom(ref='bottomFake', v-if='openingDetail', v-bind:style="{top: fakePosTwo}")
+        .phonebook__contact-name {{contact.firstName}} {{contact.lastName}}
+    ul.phonebook__contacts--fake.phonebook__contacts--fake-bottom(ref='bottomFake', v-if='detailOpened', v-bind:style="{top: fakePosTwo + 'px'}")
       li.phonebook__contact(v-for='contact, i in contacts.slice(active + 1, active + 5)', :class="[i === 0 ? 'phonebook__contact--next' : '']")
         img.phonebook__contact-avatar(:src="contact.avatar")
-        .phonebook__contact-name {{contact.name}}
-  ul.phonebook__contacts(ref='contacts', v-bind:class="{ 'phonebook__contacts--opening': openingDetail }")
+        .phonebook__contact-name {{contact.firstName}} {{contact.lastName}}
+  ul.phonebook__contacts(ref='contacts', v-bind:class="{ 'phonebook__contacts--opening': detailOpened }")
     li.phonebook__contact(v-for="contact, i in contacts", v-on:click="() => selectContact(i, contact)", :class="[i === active ? 'phonebook__contact--active' : '', i === next ? 'phonebook__contact--next' : '', i === prev ? 'phonebook__contact--prev' : '']")
       img.phonebook__contact-avatar(:src="contact.avatar")
-      .phonebook__contact-name {{contact.name}}
+      .phonebook__contact-name {{contact.firstName}} {{contact.lastName}}
